--- a/index.html
+++ b/index.html
@@ -46,54 +46,13 @@
       <!-- Gallery -->
       <div class="gallery">
         <div class="feature">
-          <div class="center">
-            <div class="image-container">
-              <img src="./assets/rel-cont-1.jpg" />
-            </div>
-            <div class="content">
-              <h2>Blockchain Technology</h2>
-            </div>
-          </div>
+            <img src="./assets/basketball-g1cb5a86d1_1920.jpg" />
         </div>
         <div class="feature">
-          <div class="center">
-            <div class="image-container">
-              <img src="./assets/rel-cont-2.jpg" />
-            </div>
-            <div class="content">
-              <h2>Modern Management</h2>
-            </div>
-          </div>
+            <img src="./assets/extreme-g6db52d308_1920.jpg" />
         </div>
         <div class="feature">
-          <div class="center">
-            <div class="image-container">
-              <img src="./assets/rel-cont-3.jpg" />
-            </div>
-            <div class="content">
-              <h2>Freedom</h2>
-            </div>
-          </div>
-        </div>
-        <div class="feature">
-          <div class="center">
-            <div class="image-container">
-              <img src="./assets/rel-cont-4.jpg" />
-            </div>
-            <div class="content">
-              <h2>Future</h2>
-            </div>
-          </div>
-        </div>
-        <div class="feature">
-          <div class="center">
-            <div class="image-container">
-              <img src="./assets/rel-cont-5.jpg" />
-            </div>
-            <div class="content">
-              <h2>Development</h2>
-            </div>
-          </div>
+            <img src="./assets/skateboard-g753353ee3_1920.jpg" />
         </div>
       </div>
 
