--- a/index.html
+++ b/index.html
@@ -56,27 +56,29 @@
         </div>
       </div>
 
-      <!-- Team Section -->
-      <div class="team-section">
-        <div class="team-heading">
-          <h1>Our Team Core</h1>
+      <!-- Mid Section Text -->
+      <div class="mid-section">
+        <h1>Vitality in sports</h1>
+        <h2>In top level sport, we’re now involved in football, rugby, cricket, hockey and netball and are wholehearted advocates of women in sport. To help create long-term benefits for local communities, we’re also big supporters of grassroots sport and community initiatives like back to netball , back to hockey, parkrun with Vitality and the Community Sports Trust.</h2>
+      </div>
+
+      <!-- Bottom Section -->
+      <div class="bottom-section">
+        <div class="row">
+            <div class="txt left">
+                <h1>7 things we learnt from joining a sports team</h1>
+                <h4>Our #WomenInSport teammates share the amazing benefits of joining a local sports team and their tried-and-tested tips to get started.</h4>
+                <button>Benefits of team sports</button>
+            </div>
+            <div class="img one"></div>
         </div>
-        <div class="images-container">
-          <div class="image-container">
-            <img src="./assets/manager4.jpeg" />
-            <h1>Damian Kozyra</h1>
-            <h2>Partner - Research & Development</h2>
-          </div>
-          <div class="image-container">
-            <img src="./assets/manage1.jpeg" />
-            <h1>Monika Kozyra</h1>
-            <h2>C.E.O. - Founder and Principal Investor</h2>
-          </div>
-          <div class="image-container">
-            <img src="./assets/manager2.jpeg" />
-            <h1>Jonathan Smith</h1>
-            <h2>Partner - Partnerships & Marketing</h2>
-          </div>
+        <div class="row">
+            <div class="txt right">
+                <h1>7 reasons why team sports will super charge your health</h1>
+                <h4>From feeling more content to seeing your fitness levels sky rocket, these science-backed reasons prove that team sports can boost your physical and mental health.</h4>
+                <button>Health benefits of team sports</button>
+            </div>
+            <div class="img two"></div>
         </div>
       </div>
     </main>
@@ -84,13 +86,7 @@
     <!-- Footer -->
     <footer>
       <div class="footer">
-        <h1>Mailchimp</h1>
-        <nav>
-          <ul>
-            <li>783-323-8764</li>
-            <li>contact@mailchimp.com</li>
-          </ul>
-        </nav>
+        <a href="#"><h1>Ilove@Sport.com</h1></a>
       </div>
     </footer>
   </body>
