--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="#">Events</a></li>
           <li><a href="#">Results</a></li>
           <li><a href="#">Places</a></li>
-          <li><a href="#">Supp</a></li>
+          <li><a href="#">Support</a></li>
         </ul>
       </nav>
     </header>
