remove white spaces below images

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
       <!-- Gallery -->
       <div class="gallery">
         <div class="feature">
-            <img src="./assets/basketball-g1cb5a86d1_1920.jpg" />
+            <img src="./assets/basketball-g1cb5a86d1_1920.jpg" height="100%"/>
         </div>
         <div class="feature">
             <img src="./assets/extreme-g6db52d308_1920.jpg" />
         </div>
         <div class="feature">
-            <img src="./assets/skateboard-g753353ee3_1920.jpg" />
+            <img src="./assets/skateboard-g753353ee3_1920.jpg" height="100%"/>
         </div>
       </div>
 
